* Avoid breaking Element.prototype in browsers which support it. Closes #11004. [cfis, Tobie Langel]

* Prevent Enumerable#eachSlice from entering into an endless loop if passed an argument smaller than 1. Closes #10665. [kangax, Tobie Langel]

* Allow Selector to correctly detect the presence of namespaced attributes. Closes #10987. [Samuel Lebeau, Tobie Langel]

* Make Element#absolutize and Element#relativize always return element. Closes #10983. [kangax]

* unit test: Fix local variables, stop observers, correct css/html and fix Test.Unit.Logger#getMessageCell. [jddalton]

* unit test: Fix exiting test task on INT signal. [Samuel Lebeau]

* unit test: Fix unit test freeze in IE. [Tobie Langel]

* unit test: Instanciate Test.Unit.Logger on window load. [Tobie Langel]

* unit test: Remove usage of the 'with' statement from unit tests. [Tobie Langel]

* unit test: Clean-up. [Tobie Langel]

* unit test: Stop form observers in unit tests. Closes #10938. [kangax]

* deprecation extension: Complete rewrite of the deprecation helper, now renamed UpdateHelper and useable by third-party libs. [Tobie Langel]

* deprecation extension: Mark Hash.toJSON() as removed. [Tobie Langel]

* deprecation extension: Mark Class.create() used without arguments as deprecated. [Tobie Langel]

* deprecation extension: Mark Event.unloadCache as removed rather than deprecated. [Tobie Langel]

* deprecation extension: Log everything *but* deprecations with console.error. [Tobie Langel]

* deprecation extension: Use Firebug's console.warn and console.error. [Andrew Dupont, Tobie Langel]

* deprecation extension: Add deprecation extension. [Tobie Langel]

*1.6.0.2* (January 25, 2008)

* Update the list of officially supported browsers in the README.  [sam]

* Add tests for Element#descendantOf that deal with dynamically-created elements. [Andrew Dupont]
